# mugen-service

./: Cargo.toml
src/: main.rs
src/lib/: cli.rs  http_server.rs  lib.rs  services.rs
src/lib/handlers/: cli.rs  rest.rs
src/lib/handlers/cli/: mugen_cli_handler.rs
src/lib/handlers/rest/: mugen_rest_handler.rs  requests.rs  responses.rs
src/lib/handlers/rest/requests/: run_game_request.rs
src/lib/handlers/rest/responses/: run_game_response.rs
src/lib/services/: impls.rs  mugen_service.rs  mugen_stats_reader.rs
src/lib/services/impls/: mugen_stats_win_reader.rs
tests/integration/: mod.rs  mugen_rest_handler.rs  setup.rs
