[package]
name = "mugen-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[[test]]
name = "unitary_tests"
path = "tests/unitary/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
lazy_static = "1.4.0"
futures-util = "0.3.28"
rand = "0.8.5"
wait-timeout = "0.2.0"
sysinfo = "0.29.8"
winapi = { version = "0.3.9", features = ["ntdef", "processthreadsapi", "handleapi", "memoryapi", "winnt", "errhandlingapi", "psapi", "minwindef", "tlhelp32"] }
ntapi = "0.4.1"
log = "0.4.20"
anyhow = "1.0.86"
env_logger = "0.11.3"
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"



[dev-dependencies]
mockall = "0.12.1"
testcontainers = "0.15.0"
ctor = "0.2.8"